fix v2 z-index

--- a/src/kptalks-v2.css
+++ b/src/kptalks-v2.css
@@ -3,12 +3,13 @@ html,body{
 }
 #kp_come_container {
   position:fixed;
-  z-index: 2000000;
+  z-index: 99999999;
 }
 #kp_come_container #kp_popup {
   padding: 20px;
   width: 300px; height:140px;
   position: absolute;
+  z-index: 99999999;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
